--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,8 @@
 
 <body class="body-index">
   <ul>
-    <li><a href="1-timer.html">Countdown timer</a></li>
-    <li><a href="2-snackbar.html">Promise generator</a></li>
+    <li><a href="./1-timer.html">Countdown timer</a></li>
+    <li><a href="./2-snackbar.html">Promise generator</a></li>
   </ul>
 </body>
 
